--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -27,18 +27,24 @@
   align-items: center;
 }
 .login-form #email {
+  width: 100%;
   height: 2rem;
   border: 2px solid black;
   border-radius: 4px;
   font-size: 16px;
   outline: none;
+  display: flex;
+  flex-direction: column;
 }
 .login-form #password {
+  width: 100%;
   height: 2rem;
   border: 2px solid black;
   border-radius: 4px;
   font-size: 16px;
   outline: none;
+  display: flex;
+  flex-direction: column;
 }
 .login-form .btn {
   width: 100px;
